MB-35889: Purge Checkpoint key indexes during expel and state change

Analysis of the MB showed that during the hang of replication, lots of
memory was consumed by checkpoint overhead (key/meta index).

The key and meta index (std::unordered_map) can have elements erased
during the expel process, reducing the memory consumed by the index(s).
After erasing the expelled items, the hash-table is resized to reclaim
empty buckets.

After state change from open to close, both indexes can be completely
cleared (the code clears and resizes the hash-table which frees the
maximum amount of memory).

Change-Id: I7be3bcf90199db45add28e3c7dcc08da11830d8a
Reviewed-on: http://review.couchbase.org/114897
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>