engines/ep/src/sizes.cc
@@ -136,5 +136,6 @@ int main(int, char **) {
     display("Default Histo", stats.diskInsertHisto.getMemFootPrint());
     display("Commit Histo", stats.diskCommitHisto.getMemFootPrint());
     display("Hash table depth histo", dv.depthHisto.getMemFootPrint());
+    display("CheckpointIndexKey", sizeof(CheckpointIndexKey));
     return 0;
 }
